--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ idna==3.7
 importlib-metadata==6.7.0
 importlib-resources==5.12.0
 Jinja2==3.1.4
+joblib==1.2.0
 jsonschema==4.17.3
 markdown-it-py==2.2.0
 MarkupSafe==2.1.5
