--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,9 @@ pytz==2024.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.31.0
 rich==13.7.1
-scikit-learn
+scikit-image==0.19.3
+scikit-learn==1.0.2
+scipy==1.7.3
 six==1.16.0
 smmap==5.0.1
 streamlit-option-menu==0.3.12
